--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/model-viewer": "^4.1.0",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
+    "@react-three/xr": "^6.6.26",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "three": "^0.180.0"
