--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,5 +25,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "src/types"]
+  "include": ["src", "src/types", "zapper.d.ts"]
 }
